--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -763,8 +763,10 @@
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>How to apply the factors for <strong>self-employed fishing</strong> income</summary>
-<p>You need to consider other factors when you apply the <a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">connecting factors test for self-employed fishing income<span class="far fa-question-circle"></span></a>. </p>
+<details><summary>How to review special considerations when applying the factors for <strong>self-employed fishing</strong> income</summary>
+You need to review specific considerations when you apply the connecting factors test for self-employed fishing income
+
+<p>You need to review special considerations when you apply the <a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">connecting factors test for self-employed fishing income<span class="far fa-question-circle"></span></a>. </p>
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 </details>
 
@@ -880,8 +882,8 @@
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<details><summary>How to apply the factors for <strong>self-employed farming</strong> income</summary>
-<p>You must apply the <a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
+<details><summary>How to review special considerations when applying the factors for <strong>self-employed farming</strong> income</summary>
+<p>You need to review special considerations when you apply the <a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">connecting factors test for self-employed farming income<span class="far fa-question-circle"></span></a>.</p>
 </details>
 </div>
 
@@ -918,7 +920,7 @@
 
 <li><h3 id="tab4-step4">Report the payment on a T4A slip</h3>
 
-<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong>, if the total payments for the calendar year made to the First Nations self-employed worker are <strong>more than $500</strong> or you deducted income tax depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the self-employed income paid to your First Nations self-employed worker depending if the income is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
@@ -928,13 +930,13 @@
    
 <li class="cnjnctn-col"><h4>Partly-exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Box 028 <small>- Report <strong>only on taxable income</strong> if you paid fees for services</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Box 048 <small>- Report <strong>only on taxable income</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 048 <small>- Report <strong>only on taxable</strong> income if you paid fees for services</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 028 <small>- Report <strong>only on taxable</strong> other income</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
 </ul>
 
-<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted income tax from the payment.</p>   
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 </li>
