--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -495,7 +495,7 @@
                   </ul>
 </details>
 </details>
-<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Determine if guideline 3 applies</a>.</p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Determine if guideline 3 applies</a>.</p>
 </li>
 
 <li><h4 id="step3d">Determine if guideline 3 applies</h4>
@@ -540,8 +540,8 @@
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
-<br>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income partly-exempt</strong>.</p>
+
+<p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
