--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -387,8 +387,8 @@
 <li class="cnjnctn-col">Resident on a reserve </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">A First Nations band which has a reserve, or a tribal council representing one or more First Nations bands that have reserves  </li>
-<li class="cnjnctn-col">A First Nations organization controlled by a First Nations band which has a reserve, or a tribal council representing one or more First Nations bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of First Nations individuals who for the most part live on reserves </li>
+<li class="cnjnctn-col">A First Nations band which has a reserve, or a tribal council representing 1 or more First Nations bands that have reserves  </li>
+<li class="cnjnctn-col">A First Nations organization controlled by a First Nations band which has a reserve, or a tribal council representing 1 or more First Nations bands that have reserves, and the organization is dedicated exclusively to the <a href="#ajax-def5" aria-controls="ajax-def5" class="overlay-lnk" role="button">social, cultural, educational, or economic development <span class="far fa-question-circle"></span></a> of First Nations individuals who for the most part live on reserves </li>
 </ul>
 </li>
 <li class="cnjnctn-col">Employee's duties of employment are in connection with the employer's non-commercial activities carried on exclusively for the benefit of First Nations individuals who for the most part live on reserves </li>
