--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -671,9 +671,18 @@
  
 <p>You need to determine the portion of the employment-related income of the First Nations employee that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
 
-<p>If the employment-related income is related to <strong>all tax-exempt</strong> First Nations employment income, the  employment-related income will <strong>all be exempt</strong>.</p>
+<p><strong>Generally</strong>, the exemption applies depending on the share of employment income the payment was related to that was exempt from tax as follows:</p>
 
-<p>Generally, if the employment-related income is related to <strong>partly-exempt</strong> First Nations employment income, any employment-related income arising from the exempt share of that income will also be tax-exempt.</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All employment income was tax exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> All employment-related income related to tax-exempt employment income will be exempt from tax </li> 	 
+</ul></li>
+<li class="cnjnctn-col"><h4>Part of the employment income was tax exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> All employment-related income related to tax-exempt employment income will be exempt from tax</li> 	 
+<li><span class="fas fa-check fa-li text-success"></span> Any employment-related income arising from the taxable portion of employment income will be taxable </li> 	 
+ </ul></li></ul>
 
 </div>
 
@@ -707,7 +716,7 @@
 <li class="cnjnctn-col"><h4>All exempt</h4>
  <h5>Other income</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul>
  <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -788,15 +797,23 @@ You need to review specific considerations when you apply the connecting factors
 <li><h3 id="tab3-step2">Determine the percentage of income situated on a reserve</h3>
  <div id="ajax-how-tab3-prorate">
  
-<p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
+<p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve.</p>
 
-<p>Generally, the income is fully exempt from income tax if the self-employed First Nations worker’s income-earning activities take place on reserve.</p>
+<p><strong>Generally</strong>, exemption applies depending on the percentage of income situated on a reserve as follows:</p>
 
-<p>Generally, the income is partly-exempt from income tax if part of the self-employed First Nations worker's income-earning activities take place on reserve and part off of a reserve. </p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All employment income was tax exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> All income-earning activities will be tax-exempt </li> 	
+<li><span class="fas fa-check fa-li text-success"></span> Business expenses will be allocated to the tax-exempt income</li> 	 
+</ul></li>
+<li class="cnjnctn-col"><h4>Part of the employment income was tax exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> All income-earning activities on reserve will be tax-exempt</li> 	 
+<li><span class="fas fa-check fa-li text-success"></span> All income-earning activities off reserve will be taxable </li> 
+<li><span class="fas fa-check fa-li text-success"></span> Business expenses arising from the taxable portion of the income will be allocated to that income, unless another allocation can be shown to be more reasonable </li> 	 
+ </ul></li></ul>
 
-<p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve.</p>
-
-<p>If that self-employment income was partly-exempt from income tax, the business expenses arising from the exempt share of that income will also be exempt from income tax, unless another allocation can be shown to be more reasonable.</p>
 </div>
 
 </li>
