--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -799,7 +799,7 @@ You need to review specific considerations when you apply the connecting factors
  
 <p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve.</p>
 
-<p><strong>Generally</strong>, exemption applies depending on the percentage of income situated on a reserve as follows:</p>
+<p><strong>Generally</strong>, the exemption applies depending on the percentage of income situated on a reserve as follows:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All employment income was tax exempt</h4>
