--- a/payroll/calculate/payment/first-nations-pop2.html
+++ b/payroll/calculate/payment/first-nations-pop2.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Indian workers and the Canada Pension Plan - Canada.ca</title>
+         <title>First Nations workers and the Canada Pension Plan - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -84,7 +84,7 @@
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
           
- <h1 property="name" id="wb-cont" class="gc-thickline">Indian workers and the Canada Pension Plan</h1>
+ <h1 property="name" id="wb-cont" class="gc-thickline">First Nations workers and the Canada Pension Plan</h1>
      
      <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the Canada Revenue Agency (CRA) uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>We want you to be aware of tax benefits and requirements that apply to you as an individual who is an <a href="#hdng17">Indian</a> as defined in the Indian Act. On these pages, you will find general information on income tax, the goods and services tax/harmonized sales tax (GST/HST) and excise tax. There may be exceptions to the information we have provided here, and we have not dealt with all situations.</p>
