--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine the employment status - Canada.ca</title>
+         <title>Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -78,11 +78,12 @@
 <dt>    <a href="contract.html">Determine if a contract is valid</a>  </dt>
   <dd>Information on what is considered a valid contract, who decides when a contract is null and void and what are examples of contracts that are terminated  </dd>
 
+  <dt>    <a href="factors.html">Determine if the worker is an employee or self-employed</a>  </dt>
+  <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
+
 <dt>    <a href="factors-psb.html">Determine if the worker is an incorporated employee</a>  </dt>
   <dd>Information on the factors to consider to determine if the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if  an individual performs the services on behalf of their own corporation (personal services business) </dd>
-	
-  <dt>    <a href="factors.html">Determine the worker classification</a>  </dt>
-  <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
+
 
 <dt>    <a href="after.html">Understand the income tax, payroll and GST/HST tax obligations</a>  </dt>
    <dd>Find links to your tax obligations depending on your situation, including how to request penalty or interest relief  </dd>
