--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Overview - Determine the employment status - Canada.ca</title>
+         <title>Overview - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -52,7 +52,7 @@
                 title: "Payroll",
                 href: "../../index.html"
               },{
-                title: "Determine the employment status",
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "index.html"
              
               }
@@ -66,7 +66,7 @@
 
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
   <ul>
 
  <li>	 <a href="overview.html" class="active" aria-current="page">Overview</a>	</li>
@@ -75,11 +75,11 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if a contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if a contract is valid</a></li>
 
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
+
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
-
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a></li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
