--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine the worker classification - Determine the employment status - Canada.ca</title>
+         <title>Determine the employment status: Employee, incorporated employee or self-employed - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -52,7 +52,7 @@
                 title: "Payroll",
                 href: "../index.html"
               },{
-                title: "Determine the employment status",
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "index.html"
              
               }
@@ -66,7 +66,7 @@
 
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
   <ul>
 
  <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
@@ -75,24 +75,27 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-
- <li>	 <a href="factors.html" class="active" aria-current="page">Determine the worker classification</a>	
+ <li>	 <a href="factors.html" class="active" aria-current="page">Determine if the worker is an employee or self-employed</a>	
 
 <ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Determine the worker classification - Province or territory other than Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province or territory other than Quebec </a></li>
+   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed: Province or territory other than Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed: Province or territory other than Quebec </a></li>
   
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Determine the worker classification - Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed: Province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed: Province of Quebec</a></li>
  
                            
                             </ul>
  </li>
+
+
+<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
+
+
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the income tax, payroll and GST/HST tax obligations </a></li>
 
@@ -101,7 +104,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine the worker classification</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed</h1>
  
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
@@ -117,14 +120,14 @@
 <li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine the worker classification - Contract formed in a province or territory other than Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine if the worker is an employee or self-employed: Contract formed in a province or territory other than Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">In the province of Quebec</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in Quebec</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Determine the worker classification - Contract formed in the province of Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Determine if the worker is an employee or self-employed: Contract formed in the province of Quebec</a></p>
 </li>
 </ul>
 
