--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Understand the income tax, payroll and GST/HST tax obligations - Determine the employment status - Canada.ca</title>
+         <title>Understand the income tax, payroll and GST/HST tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -53,7 +53,7 @@
                 href: "../../index.html"
              
              },{
-                title: "Determine the employment status",
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "index.html"
               }
               ],
@@ -65,7 +65,7 @@
          <main role="main" property="mainContentOfPage" class="container">
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
   <ul>
 
 <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
@@ -75,12 +75,11 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a></li>
+
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
-
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a></li>
-
 
 <li><a href="after.html" class="active" aria-current="page">Understand the income tax, payroll and GST/HST tax obligations</a>	</li>
 
