--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine the worker classification - Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
+         <title>Determine if the worker is an employee or self-employed - Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -72,30 +72,25 @@
  <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
       <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
 
-<li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
-      <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
+<li><a href="contract.html" class="hidden-xs hidden-sm">Determine if a contract is valid </a>
+      <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if a contract is valid</a></li>
 
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
-
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
 
 
 <ul class="noline">
 
-  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Determine the worker classification - Province or territory other than Quebec</a></li>
+  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Province or territory other than Quebec</a></li>
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Determine the worker classification - Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province of Quebec</a></li>
-  
-        
-     
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Province of Quebec</a></li>
                             </ul>
 
-
-
 	</li>
+
+<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
@@ -106,7 +101,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine the worker classification - Contract formed in a province or territory other than Quebec</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in a province or territory other than Quebec</h1>
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
