--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -80,8 +80,8 @@
 
 <ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory other than Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Province or territory other than Quebec </a></li>
+   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory not in Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Province or territory not in Quebec </a></li>
   
   
 <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
@@ -120,7 +120,7 @@
 <li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine if the worker is an employee or self-employed: Contract formed in a province or territory other than Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
