--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine if the worker is an employee or self-employed - Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
+         <title>Contract formed in a province or territory not in Quebec - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -52,7 +52,7 @@
                 title: "Payroll",
                 href: "../../index.html"
               },{
-                title: "Determine the employment status",
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "index.html"
              
               }
@@ -66,7 +66,7 @@
 
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
   <ul>
 
  <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
@@ -81,7 +81,7 @@
 
 <ul class="noline">
 
-  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Province or territory other than Quebec</a></li>
+  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Province or territory not in Quebec</a></li>
   
 <li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
       <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Province of Quebec</a></li>
@@ -101,7 +101,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in a province or territory other than Quebec</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</h1>
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
