--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -117,8 +117,8 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
-<li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
+<li class="cnjnctn-col">In a province not in Quebec or in a territory</li>
+<li class="cnjnctn-col">Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</a></p>
 </li>
