--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -114,8 +114,7 @@
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Employee </li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Self-employed and contractor, including a personal services business </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Director </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Office holder </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Incorporated employee </li>
 </ul>
 
 <h2 id="h_2">Different employment status for tax purposes</h2>
