--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -80,12 +80,12 @@
 
 <ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory not in Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Province or territory not in Quebec </a></li>
+   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec </a></li>
   
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
  
                            
                             </ul>
@@ -110,9 +110,9 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>You need to consider multiple factors to determine if the worker is an employee or is self-employed. The factors are different if the contract is formed in a province or territory other than Quebec or in the province of Quebec (unless the contract states differently). </p>
+<p>You need to consider multiple factors to determine if the worker is an employee or is self-employed.  </p>
 
-<p> If the contract is formed:</p>
+ <p>Unless the contract states differently, the factors are different if the contract is formed:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -120,14 +120,14 @@
 <li class="cnjnctn-col">In a province not in Quebec or in a territory</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory not in Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">In the province of Quebec</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in Quebec</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Determine if the worker is an employee or self-employed: Contract formed in the province of Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
 </li>
 </ul>
 
