--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -81,10 +81,10 @@
 
 <ul class="noline">
 
-  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Province or territory not in Quebec</a></li>
+  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory not in Quebec</a></li>
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed the a province of Quebec</a></li>
                             </ul>
 
 	</li>
@@ -108,7 +108,7 @@
 
  <p>Use this guidance if the contract was formed (unless the contract states differently):</p>
 <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> In a province or territory not in Quebec</li>
+<li><span class="fas fa-check fa-li text-success"></span> In a province not in Quebec or in a territory </li>
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
 
