--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -81,10 +81,10 @@
 
 <ul class="noline">
 
-  <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory not in Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Province or territory not in Quebec</a></li>
+  <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory not in Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory not in Quebec</a></li>
   
-   <li>	 <a href="factors-quebec.html" class="active" aria-current="page">Province of Quebec</a></li>
+   <li>	 <a href="factors-quebec.html" class="active" aria-current="page">Contract formed in the province of Quebec</a></li>
                       
     
                             </ul>
