--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -213,7 +213,7 @@
 <h4>Indicator: Contract is not valid</h4>    
  <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>   
+ 
             </div>
 
 
@@ -263,7 +263,7 @@
 <div data-ajax-replace="#ajax-contract-stop"></div>
 </details>
 
-<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a></p>
+
 </div>
 
 </div></div>
@@ -358,7 +358,12 @@
 	
 </div>
 </div>
-
+<nav class="mrgn-bttm-lg mrgn-tp-lg">
+  <h3 class="wb-inv">Document navigation</h3>
+  <ul class="pager">
+    <li class="next"><a href="factors.html" rel="next"><span class="wb-inv">Next: </span>Determine if the worker is an employee or self-employed</a></li>
+  </ul>
+</nav>
 
 <section id="contract-null" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Who decides when a contract is null and void</h2>
 	</header>	<div class="modal-body">		
