--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -984,7 +984,8 @@ html:lang(fr) .cnjnctn-or:before {
         </ul>
         <details>
           <summary>Calculation example</summary>
-          <p>For the 2023 calendar year, the value of the residential property is $500,000. You are 1 of 2 owners indicated in the land registration system.</p>
+          <p>For the 2023 calendar year, the value of the residential property is $500,000.</p>
+		<p>You are 1 of 2 owners, each indicated in the land registration system as holding 50% ownership in the property.</p>
           <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
             <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (Value of the property)</span></li>
             <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">1% (Underused Housing Tax rate)</span> </li>
