--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -112,6 +112,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
 
+<p>Learn more: <a href="contract.html">Determine if a contract is valid</a>.</p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
@@ -1240,7 +1241,7 @@
 <p>The worker performs their services independently, for their own business.</p>
 <br>
 <h5>Additional indicator - PSB</h5>
-<p>It is also possible the person is operating as an incorporated employee. Learn more: <a href="factors-psb.html">Personal services business</a>.</p>
+<p>It is also possible the person is operating as an incorporated employee. Learn more: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a>.</p>
 </div>
 
 </form></div></div>
