--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -112,6 +112,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in Quebec</li>
 </ul>
 
+<p>Learn more: <a href="contract.html">Determine if a contract is valid</a>.</p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
