--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -147,6 +147,7 @@
 </div>
 <h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
+<p>If you are not sure of which jurisdiction sets the rules for your industry, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
@@ -160,7 +161,7 @@
                         <div class="mrgn-tp-md">
                          
                         </div>
-                        <p class="wb-fieldflow-label">Are the parties involved legally capable of entering into a contract?</p>
+                        <p class="wb-fieldflow-label">Are the parties to the contract of legal age (as per the respective provincial Employment Standards)? </p>
                       
                       </div>
 		<ul>
