--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -99,7 +99,6 @@
 <details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
-<li>Are the parties to the contract of legal age (as per the respective provincial Employment Standards site)? If the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? </li>
 <li>Did the parties have any mental disabilities that would prevent them from understanding the nature of the contract? </li>
 <li>What was the offer, which is, what was the worker hired to do? </li>
 <li>What did the worker agree to do? </li>
@@ -147,7 +146,7 @@
 </div>
 <h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
-<p>If you are not sure of which jurisdiction sets the rules for your industry, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
+<p><small>If you are not sure of which jurisdiction sets the rules for your industry, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></small></p>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
@@ -161,7 +160,7 @@
                         <div class="mrgn-tp-md">
                          
                         </div>
-                        <p class="wb-fieldflow-label">Are the parties to the contract of legal age (as per the respective provincial Employment Standards)? </p>
+                        <p class="wb-fieldflow-label">Are the parties to the contract of legal age (as per the respective provincial Employment Standards)? or if the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? </p>
                       
                       </div>
 		<ul>
