--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -99,7 +99,6 @@
 <details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
-<li>Did the parties have any mental disabilities that would prevent them from understanding the nature of the contract? </li>
 <li>What was the offer, which is, what was the worker hired to do? </li>
 <li>What did the worker agree to do? </li>
 <li>Where was the work to be performed? </li>
@@ -160,7 +159,7 @@
                         <div class="mrgn-tp-md">
                          
                         </div>
-                        <p class="wb-fieldflow-label">Are the parties to the contract of legal age (as per the respective provincial Employment Standards)? or if the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? </p>
+                        <p class="wb-fieldflow-label">Are the parties to the contract of legal age or if the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? (as per the respective provincial Employment Standards)</p>
                       
                       </div>
 		<ul>
@@ -219,10 +218,15 @@
 
 <div id="ajax-q2-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
  <h3><small>Your result </small><br>
-                The parties involved are not legally capable of entering into a contract</h3>
+                The parties involved are not legally capable of entering into a contract (as per the respective provincial Employment Standards)</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
+<p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
+	<ul>
+<li>The worker does not have the legal age to work</li>
+<li>The parents or legal guardians did not provide written consent for the minor child to work</li>
+<li>One of the parties have a mental disability that prevents them from understanding the nature of the contract</li>
+</ul>
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
 <p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>     
 </div>
