--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -86,6 +86,13 @@
           
  <h1 property="name" id="wb-cont" class="gc-thickline">Indian Act exemption for employment income guidelines</h1>
 
+<div id="ajax-fntermall">
+<div id="ajax-fnterm">
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations employee or worker on this page refers <strong>only</strong> to an employee or a worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+ </div>
+<p>Many Indigenous people in Canada prefer not to describe themselves as Indians and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
+ </div>
+
  <h3>On this page</h3>
 <ul>
   <li><a href="#intro">Introduction</a></li>
