--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,11 +261,7 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
-<div id="ajax-fnterm">
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations employee or worker on this page refers <strong>only</strong> to an employee or a worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
- </div>
-<p>Many Indigenous people in Canada prefer not to describe themselves as Indians and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
-
+<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fntermall"></div>
 
 <p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
 <ul>
@@ -1032,7 +1028,7 @@ You need to review specific considerations when you apply the connecting factors
 
 <section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-fnterm"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
 	</div></section>
 
 
