--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -96,7 +96,7 @@
 
 
 <p>There must be a valid contract in place to determine if the worker is considered an employee or is self-employed.</p>
-<details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
+<details> <summary>Examples of questions the CRA may ask you to determine the validity of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
 <li>What was the offer, which is, what was the worker hired to do? </li>
