--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -124,7 +124,7 @@
 <p>If you have any questions about a particular situation, contact us toll free at <strong>1-800-959-8281</strong>.</p> 
 
  <section class="alert alert-info">
-<p>Each of the individuals in the following examples is a First Nations individual.</p>
+<p>Each of the individuals in the following examples is a First Nations employee or worker.</p>
 </section>   
     
         <h2 id="1">Guideline 1</h2>
