--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -81,7 +81,7 @@
 </div>  
 <hr>
   <div class="alert alert-info">
-<p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
+<p>Content has been updated to remove the word Indian where it is not a direct reference to the Indian Act. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
           
  <h1 property="name" id="wb-cont" class="gc-thickline">Indian Act exemption for employment income guidelines</h1>
