--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -256,7 +256,9 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Payments to First Nations workers</h1>
 <div class="alert alert-info">
-<p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
+
+<p>Content has been updated to remove the word Indian where it is not a direct reference to the Indian Act, including improving clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
+
 </div>
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
