--- a/payroll/calculate/payment/first-nations-pop2.html
+++ b/payroll/calculate/payment/first-nations-pop2.html
@@ -80,8 +80,9 @@
 <h3>The content is taken from the following <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/information-indians.html">live webpage</a>. Layout has been udated to incorporate coding that will enable the reuse of the content within the payroll webpage.</h3>
 </div> 
 <hr>
-  <div class="alert alert-info">
-<p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
+    <div class="alert alert-info">
+<p>Content has been updated to remove the word Indian where it is not a direct reference to the Indian Act. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
+</div>
 </div>
           
  <h1 property="name" id="wb-cont" class="gc-thickline">First Nations workers and the Canada Pension Plan</h1>
