--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -107,7 +107,7 @@
 
 
 <h2 id="intro">Introduction</h2>
-<p>Section 87 of the Indian Act exempts from taxation the personal property of a First Nations employee situated on a reserve. The courts have determined that, for the purposes of section 87 of the Indian Act, employment income is personal property. In the case of employment income earned by a First Nations employee, therefore, what must be determined is whether the employment income is situated on a reserve. The courts have directed that connecting factors must be considered when making this determination. The Candada Revenue Agency, after receiving representations from interested First Nations groups and individuals, has identified a number of connecting factors that can be used to determine whether employment income is situated on a reserve.</p> 
+<p>Section 87 of the Indian Act exempts from taxation the personal property of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> situated on a reserve. The courts have determined that, for the purposes of section 87 of the Indian Act, employment income is personal property. In the case of employment income earned by a First Nations employee, therefore, what must be determined is whether the employment income is situated on a reserve. The courts have directed that connecting factors must be considered when making this determination. The Candada Revenue Agency, after receiving representations from interested First Nations groups and individuals, has identified a number of connecting factors that can be used to determine whether employment income is situated on a reserve.</p> 
 
 <p>The location of the employment duties is a major connecting factor. However, the Department also recognizes that employees of bands, tribal councils, or organizations that operate on behalf of bands or tribal councils may perform most of their activities off reserve. For the employees, the connection to a reserve is that the employer is resident on a reserve and the First Nations employee is employed in a non-commercial activity for the social, cultural, educational, or economic development of First Nations individuals who for the most part live on reserves.</p> 
 
@@ -124,7 +124,7 @@
 <p>If you have any questions about a particular situation, contact us toll free at <strong>1-800-959-8281</strong>.</p> 
 
  <section class="alert alert-info">
-<p>Each of the individuals in the following examples is a First Nations employee or worker.</p>
+<p>Each of the individuals in the following examples is a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee or worker <span class="far fa-question-circle"></span></a>.</p>
 </section>   
     
         <h2 id="1">Guideline 1</h2>
@@ -344,6 +344,13 @@
 </dl>
    </div>
 </div>  
+
+
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
+	</div></section>
+
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
