--- a/payroll/calculate/payment/first-nations-pop2.html
+++ b/payroll/calculate/payment/first-nations-pop2.html
@@ -91,7 +91,7 @@
 <p>We want you to be aware of tax benefits and requirements that apply to you as an individual who is an <a href="#hdng17">Indian</a> as defined in the Indian Act. On these pages, you will find general information on income tax, the goods and services tax/harmonized sales tax (GST/HST) and excise tax. There may be exceptions to the information we have provided here, and we have not dealt with all situations.</p>
 
     
-<h2>How to obtain an application for coverage of employment of an Indian in Canada under the Canada Pension Plan whose income is exempt under the Income Tax Act</h2>
+<h2>How to apply for the Canada Pension Plan if the First Nations worker's income is exempt under the Income Tax Act</h2>
 
 <details><summary>Election by the employer</summary>  
       
