--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -303,7 +303,8 @@
     
 </div>
 </details>
-    
+
+  <div id="terms-used-first-nations">   
         <h2 id="meaning">Meaning of terms used</h2> 
  
 <div class="row">
@@ -344,7 +345,7 @@
 </dl>
    </div>
 </div>  
-
+</div>
 
 <section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
 	</header>	<div class="modal-body">		
